add an input placholder

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<h1>Astar</h1>
 	<form>
 		<label for="initail">Initial state:</label><br>
-		<input class="form-control" type="text" value="" id="location"><br>
+		<input class="form-control" type="text" value="" placeholder="put T or A or B" id="location"><br>
 		<input class="form-control" type="number" value="" id="smallPackage"><br>
 		<input class="form-control" type="number" value="" id="largPackage"><br>
 		<input class="form-control" type="number" value="" id="meduimPackageA"><br>
