--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 	<form>
 		<label for="initail">Initial state:</label><br>
 		<input class="form-control" type="text" value="" placeholder="put T or A or B" id="location"><br>
-		<input class="form-control" type="number" value="" placeholder="put number for smallPackage in truck " id="smallPackage"><br>
-		<input class="form-control" type="number" value="" placeholder="put number for largPackage in truck" id="largPackage"><br>
-		<input class="form-control" type="number" value="" placeholder="put number for meduimPackage in A" id="meduimPackageA"><br>
-		<input class="form-control" type="number" value="" placeholder="put number for meduimPackage in B" id="meduimPackageB"><br>
+		<input class="form-control" type="number" value="" placeholder="number smallPackage in truck " id="smallPackage"><br>
+		<input class="form-control" type="number" value="" placeholder="number largPackage in truck" id="largPackage"><br>
+		<input class="form-control" type="number" value="" placeholder="number meduimPackage in A" id="meduimPackageA"><br>
+		<input class="form-control" type="number" value="" placeholder="number meduimPackage in B" id="meduimPackageB"><br>
 		<br>
 		<label for="goal">Goal State:</label><br>
 		<input class="form-control" type="text" value="T" id="Glocation"><br>
