--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
 	<h1>Astar</h1>
 	<form>
 		<label for="initail">Initial state:</label><br>
-		<input class="form-control" type="text" value="" placeholder="put T or A or B" id="location"><br>
-		<input class="form-control" type="number" value="" placeholder="number smallPackage in truck " id="smallPackage"><br>
-		<input class="form-control" type="number" value="" placeholder="number largPackage in truck" id="largPackage"><br>
-		<input class="form-control" type="number" value="" placeholder="number meduimPackage in A" id="meduimPackageA"><br>
-		<input class="form-control" type="number" value="" placeholder="number meduimPackage in B" id="meduimPackageB"><br>
+		<input class="form-control" style="width: 300px" type="text" value="" placeholder="put T or A or B" id="location"><br>
+		<input class="form-control" style="width: 300px" type="number" value="" placeholder="number smallPackage in truck " id="smallPackage"><br>
+		<input class="form-control" style="width: 300px" type="number" value="" placeholder="number largPackage in truck" id="largPackage"><br>
+		<input class="form-control" style="width: 300px" type="number" value="" placeholder="number meduimPackage in A" id="meduimPackageA"><br>
+		<input class="form-control" style="width: 300px"  type="number" value="" placeholder="number meduimPackage in B" id="meduimPackageB"><br>
 		<br>
 		<label for="goal">Goal State:</label><br>
-		<input class="form-control" type="text" value="T" id="Glocation"><br>
-		<input class="form-control" type="number" value="0" id="GsmallPackage"><br>
-		<input class="form-control" type="number" value="0" id="GlargPackage"><br>
-		<input class="form-control" type="number" value="0" id="GmeduimPackageA"><br>
-		<input class="form-control" type="number" value="0" id="GmeduimPackageB"><br>
+		<input class="form-control" style="width: 300px" type="text" value="T" id="Glocation"><br>
+		<input class="form-control" style="width: 300px" type="number" value="0" id="GsmallPackage"><br>
+		<input class="form-control" style="width: 300px" type="number" value="0" id="GlargPackage"><br>
+		<input class="form-control" style="width: 300px" type="number" value="0" id="GmeduimPackageA"><br>
+		<input class="form-control" style="width: 300px" type="number" value="0" id="GmeduimPackageB"><br>
 		<br>
 		<button onclick="setParameter(event)" type="submit" class="btn btn-primary">Submit</button>
 	</form>
