add some text to input

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<h1>Astar</h1>
 	<form>
 		<label for="initail">Initial state:</label><br>
-		<input class="form-control" style="width: 300px" type="text" value="" placeholder="put T or A or B" id="location"><br>
+		<input class="form-control" style="width: 300px" type="text" value="" placeholder="Robot location put T or A or B" id="location"><br>
 		<input class="form-control" style="width: 300px" type="number" value="" placeholder="number smallPackage in truck " id="smallPackage"><br>
 		<input class="form-control" style="width: 300px" type="number" value="" placeholder="number largPackage in truck" id="largPackage"><br>
 		<input class="form-control" style="width: 300px" type="number" value="" placeholder="number meduimPackage in A" id="meduimPackageA"><br>
